# P1

./: LICENSE  README.md  c.swarp  example1.ipynb  obs.ipynb  preprocess.py  pyproject.toml  test_import_module.py
scamp_config/: c.scamp  c.sex  p.sex
source_extractor/: c.sext  phot.param  phot.sext  s.param
src/P1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/pipeline/: __init__.py  frameproc.py  masking.py  photometry.py  preprocess_new.py  sky.py
src/pipeline/processing/: frameproc.py
